static base page

--- a/.gitignore
+++ b/.gitignore
@@ -7,13 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
 # Editor directories and files
 .vscode/*
+!.vscode/settings.json
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -22,3 +18,14 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Node / Vite
+node_modules/
+dist/
+dist-ssr
+.vite/
+*.local
+
+# Env
+.env
+.env.*.local
