--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@apollo/client": "^4.0.7",
     "@tanstack/react-table": "^8.21.3",
     "bootstrap": "^5.3.8",
+    "formik": "^2.4.6",
     "graphql": "^16.11.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
