--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "react-tagcloud": "^2.3.3",
     "yup": "^1.7.1"
   },
   "devDependencies": {
