--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "formik": "^2.4.6",
     "graphql": "^16.11.0",
+    "html-react-parser": "^5.2.7",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
