--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "react-select": "^5.10.2",
     "react-tagcloud": "^2.3.3",
     "yup": "^1.7.1"
   },
