--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apollo/client": "^4.0.7",
+    "@apollo/client": "^4.0.9",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@liveblocks/client": "^3.9.2",
+    "@liveblocks/react": "^3.9.2",
     "@tanstack/react-table": "^8.21.3",
     "bootstrap": "^5.3.8",
     "crypto-random-string": "^5.0.0",
     "dayjs": "^1.11.18",
     "formik": "^2.4.6",
-    "graphql": "^16.11.0",
+    "graphql": "^16.12.0",
+    "graphql-ws": "^6.0.6",
     "html-react-parser": "^5.2.7",
     "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
