--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_GRAPHQL_URL=http://localhost:3001/inventory
+VITE_GRAPHQL_URL=http://localhost:3001/graphql
 VITE_LIVEBLOCKS_AUTH=http://localhost:3001/api/liveblocks-auth
