--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
     "react-tagcloud": "^2.3.3",
+    "remark-gfm": "^4.0.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
