--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
     "react-tagcloud": "^2.3.3",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "yup": "^1.7.1"
   },
