--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "graphql": "^16.12.0",
     "graphql-ws": "^6.0.6",
     "html-react-parser": "^5.2.7",
+    "i18next": "^25.6.1",
     "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
+    "react-i18next": "^16.2.4",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
