--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql-ws": "^6.0.6",
     "html-react-parser": "^5.2.7",
     "i18next": "^25.6.1",
+    "libphonenumber-js": "^1.12.26",
     "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
